<resources>
    <string name="app_name">Chinese Learning App</string>
    <string name="open_nav_drawer">Open Navigation Drawer</string>
    <string name="close_nav_drawer">Close Navigation Drawer</string>
    <string name="set_notification">Set Notification</string>
    <string name="sign_out">Sign Out</string>
    <string name="log_out">Log Out</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="quizzes">Quizzes</string>
    <string name="lessons">Lessons</string>
    <string name="tutorial">Tutorial</string>
    <string name="loading">Loading...</string>
</resources>
